# fish-speech-mlx

./: .gitignore  README.md  README_MLX.md  pyproject.toml  run_api_server.command
fish_speech/inference_engine/: __init__.py  mlx_defaults.py  mlx_engine.py  reference_loader.py
fish_speech/utils/: __init__.py  schema.py
tests/: __init__.py  test_mlx_model_paths.py  test_mlx_request_mapping.py
tests/integration/: __init__.py  test_mlx_api_server.py
tools/: api_server.py  run_webui.py  test_mlx_api.py
tools/server/: api_utils.py  inference.py  model_manager.py  views.py
