[project]
name = "fish-speech"
version = "2.0.0"
authors = [
    {name = "Fish Audio", email = "oss@fish.audio"},
]
description = "Fish Speech API server for Apple Silicon"
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["TTS", "Speech", "MLX"]
license = {text = "Fish Audio Research License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "kui>=1.6.0",
    "loguru>=0.6.0",
    "numpy",
    "ormsgpack",
    "pydantic==2.9.2",
    "pyrootutils>=1.0.4",
    "soundfile",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
mlx = [
    # 0.4.2 supports the local Fish Audio bf16 and 8bit models; 0.4.3 regresses bf16 output quality.
    "mlx-audio==0.4.2",
]

[tool.uv]
# mlx-audio pulls these libraries transitively. These overrides match the
# validated local environment for Python 3.12 and the two local MLX model dirs.
override-dependencies = [
    "protobuf>=6.33.5",
    "transformers>=5.0.0",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fish_speech*", "tools*"]
namespaces = true

[tool.setuptools_scm]
